@@ -52,6 +52,7 @@ import net.sourceforge.cruisecontrol.taglib.CruiseControlLogFileFilter;
  * Contains various information about a specific build.  The
  * information is extracted from the name of the log file
  * generated by the build.
+ *
  * @author <a href="mailto:robertdw@users.sourceforge.net">Robert Watkins</a>
  * @author <a href="mailto:hak@2mba.dk">Hack Kampbjorn</a>
  */
@@ -74,10 +75,6 @@ public class BuildInfo implements Comparable, Serializable {
         
     }
     
-    /**
-     * @param infoText
-     * @return
-     */
     private String deriveLabel(String infoText) {
         boolean logfileCompressed = infoText.endsWith(LOG_COMPRESSED_SUFFIX);
         boolean buildSuccessful = (infoText.length() > (LOG_PREFIX
@@ -97,13 +94,13 @@ public class BuildInfo implements Comparable, Serializable {
         return theLabel;
     }
 
-    /**
-     * @param infoText
-     * @return
-     * @throws ParseException
-     */
     private Date deriveDate(String infoText) throws ParseException {
-        String dateStamp = infoText.substring(LOG_PREFIX.length(), LOG_PREFIX.length() + LOG_DATE_PATTERN.length());
+        String dateStamp;
+        try {
+            dateStamp = infoText.substring(LOG_PREFIX.length(), LOG_PREFIX.length() + LOG_DATE_PATTERN.length());
+        } catch (StringIndexOutOfBoundsException e) {
+            throw new IllegalStateException("infoText has wrong format: " + infoText + " " + e.getMessage());
+        }
         Date theDate;
         try {
             theDate = LOG_DATE_FORMAT.parse(dateStamp);
@@ -114,15 +111,10 @@ public class BuildInfo implements Comparable, Serializable {
         return theDate;
     }
 
-    /**
-     * @return Returns the buildDate.
-     */
-    public Date getBuildDate() {
+   public Date getBuildDate() {
         return buildDate;
     }
-    /**
-     * @return Returns the label.
-     */
+
     public String getLabel() {
         return label;
     }
@@ -131,17 +123,10 @@ public class BuildInfo implements Comparable, Serializable {
         return getLabel() != null;
     }
 
-    /**
-     * @return Returns the fileName.
-     */
     public String getFileName() {
         return fileName;
     }
 
-    /**
-     * @param file
-     * @return
-     */
     public static BuildInfoSummary loadFromDir(File logDir) throws CruiseControlWebAppException {
         String [] logFileNames = logDir.list(new CruiseControlLogFileFilter());
         if (logFileNames == null) {
